[package]
name = "songify-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"]}
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-rustls", "macros"]}